docker-and-kubernetes/complex/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web      # Remember, the selector here and the template
                          # label below are used by the Deployment to ID the
                          # pods it is supposed to manage.
  template:
    metadata:
      labels:
        component: web    # See selector comment above.
    spec:
      containers:
        - name: client
          image: sund0g/multi-client
          ports:
            - containerPort: 3000 # This is mapped to the multi-client image.
