docker-and-kubernetes/complex/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:                     # define deployment behavior
  replicas: 3
  selector:
    matchLabels:
      component: server   # the label naming convention is arbitrary, but
                          # should clearly define what the component is.
  template:               # define pod template
    metadata:
      labels:
        component: server # MUST match the label in the deployment spec above.
    spec:                 # define pod behavior
        containers:       # what is going to run inside each pod.
          - name: server
            image: sund0g/multi-server
            ports:
              - containerPort: 5000
