docker-and-kubernetes/complex/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379        # All outside object requests go here.
      targetPort: 6379  # Using the same port for traffic inside the container.
