docker-and-kubernetes/complex/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:    # These are additional options that specify high-level 
                  # configuration around the object.
    kubernetes.io/ingress.class: nginx  # Tell k8s to create an ingress
                                        # controller based on the nginx project
    # Configure how our copy of nginx behaves
    nginx.ingress.kubernetes.io/rewrite-target: / # remove '/api' from the 
                                                  # request. This keeps from
                                                  # having to add '/api' to 
                                                  # every route inside the server
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
